--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div>
-    <h2 style="color: brown;">My travel to Turkey</h2>
+    <h2 style="color: brown; text-align: center;text-decoration: underline;">My travel to Turkey</h2>
     <h3>Experience</h3>
     <p>I was only in Turkey very, very briefly. I was on my way to Kyrgyzstan with a layover in Istanbul and my baggage
       had accidentally gotten re-routed; this meant I had to purchase a visa to go out and check it through. I had a
